# utaipfwd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makedist.sh  minmea.h  rvtracker.c  rvtracker.ini  taip.c  taip.h  toolchain.cmake  utaipfwd.c  utaipfwd.ini
openwrt/: utaipfwd
